--- a/_posts/2016-03-06-不正常人类研究中心.md
+++ b/_posts/2016-03-06-不正常人类研究中心.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: What is about a real life
-author: Author Name
+author: Chris Rody
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam imperdiet urna eu dolor placerat varius. Vivamus eros augue, consequat id scelerisque nec, fringilla in est. Proin pellentesque malesuada mauris, quis aliquam augue vestibulum ac. 
+请再努力一下，为了你想见的人，想做的事，想成为的自己
 
 ## Born to win
 -----
