--- a/_posts/2019-03-06-jekyll应用经验.md
+++ b/_posts/2019-03-06-jekyll应用经验.md
@@ -20,9 +20,16 @@ author: Chris Rody
 
 ##### 2，在posts中的md文件中插入图片不显示问题
 
->原因：图片应先上传到github，然后再按特定格式的图片地址输出
+>原因：图片应先上传到github，然后再按特定格式的图片地址输出：
 >
+
+![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/blob/master/images/2.png)
+
+##### 3，posts中md文件文件名的定义格式
+
+>文件名的格式示例：2018-09-03-我爱我的祖国.md
 >
->
->
+>博客中的文章排布效果会依据时间的顺序进行排列，具体范例如下：
+
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/blob/master/images/文件名.png)
 
