md contextt changedd

--- a/_posts/2019-03-06-jekyll应用经验.md
+++ b/_posts/2019-03-06-jekyll应用经验.md
@@ -10,7 +10,7 @@ author: Chris Rody
 
 ##  Jekyll应用笔记
 
-##### 1，avatar头像设置失败的问题
+##### 1，avatar头像设置失败
 
 > 原因：_config.yml文件中的avatar内容设置错误，应该设置为
 >
@@ -18,12 +18,13 @@ author: Chris Rody
 >
 > （注：冒号后有一空格）该头像图片avatar.jpg存在于本地仓库文件夹下的images文件夹中
 
-##### 2，在posts中的md文件中插入图片不显示问题
+##### 2，在posts中的md文件中插入图片不显示
 
->原因：图片应先上传到github，然后再按特定格式的图片地址输出：
+>原因：图片应先上传到github，然后再按下图特定格式的地址输出：
 >
+>简便方法：github的图片文件夹下点击改图-->复制图片地址链接-->把其中的“blob”改为“raw”即可。
 
-![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/blob/master/images/2.png)
+![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/图片地址格式.png)
 
 ##### 3，posts中md文件文件名的定义格式
 
@@ -31,5 +32,6 @@ author: Chris Rody
 >
 >博客中的文章排布效果会依据时间的顺序进行排列，具体范例如下：
 
-![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/blob/master/images/文件名.png)
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/文件名.png)
 
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/博客列表名.png)
