md contextt changed

--- a/_posts/2019-03-06-jekyll应用经验.md
+++ b/_posts/2019-03-06-jekyll应用经验.md
@@ -22,7 +22,7 @@ author: Chris Rody
 
 >原因：图片应先上传到github，然后再按下图特定格式的地址输出：
 >
->简便方法：github的图片文件夹下点击改图-->复制图片地址链接-->把其中的“blob”改为“raw”即可。
+>简便方法：github的图片文件夹下点击该图-->复制图片地址链接-->把其中的“blob”改为“raw”即可。
 
 ![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/图片地址格式.png)
 
