md contextt changed

--- a/_posts/2019-03-06-jekyll应用经验.md
+++ b/_posts/2019-03-06-jekyll应用经验.md
@@ -35,3 +35,11 @@ author: Chris Rody
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/文件名.png)
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/博客列表名.png)
+
+
+
+##### 5，Yaml文件头的格式
+
+在冒号之后需要加一个**空格**
+
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/Yaml书写格式.png)
