--- a/_posts/2019-3-12-linux实验.md
+++ b/_posts/2019-3-12-linux实验.md
@@ -27,7 +27,7 @@ title: 基于mykernel的简单时间片轮转多道程序内核代码分析
 
 ![01patch](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/01patch.png)
 
->make allnoconfig
+>make allnoconfig 
 >
 >make 
 >
@@ -40,3 +40,11 @@ title: 基于mykernel的简单时间片轮转多道程序内核代码分析
 
 
 ![3qemu实验结果](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/3qemu实验结果.png)
+
+分析：上图表明操作系统启动完成，并一直运行输出my_timer_handler here，因此分析源代码。
+
+>gitClone复制孟老师提供的github文件夹
+
+结果如下：
+
+![3qemu实验结果](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/gitClone.png)
