--- a/_posts/2019-3-12-linux实验.md
+++ b/_posts/2019-3-12-linux实验.md
@@ -47,4 +47,23 @@ title: 基于mykernel的简单时间片轮转多道程序内核代码分析
 
 结果如下：
 
-![3qemu实验结果](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/gitClone.png)
+![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/gitClone.png)
+
+![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/gitclone结果.png)
+
+> 将Clone下来的文件进行替换，然后重新编译，运行
+
+![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/替换文件.png)
+
+报错结果：
+
+![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/11报错.png)
+
+>分析出错代码
+
+![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/改错前.png)
+
+![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/12改错后运行qemu.png)
+
+![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/13提后运行.png)
+
