--- a/_posts/2019-3-12-linux实验.md
+++ b/_posts/2019-3-12-linux实验.md
@@ -59,11 +59,17 @@ title: 基于mykernel的简单时间片轮转多道程序内核代码分析
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/11报错.png)
 
->分析出错代码
+>分析出错代码：编译器不识别#符号，应该改成（unsigned long）1024*2
+
+
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/改错前.png)
 
-![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/12改错后运行qemu.png)
+
+
+> 修改代码后，编译，运行
+
+![结果](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/12改错后运行qemu.png)
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/13提后运行.png)
 
