--- a/_posts/2019-3-12-linux实验.md
+++ b/_posts/2019-3-12-linux实验.md
@@ -73,3 +73,8 @@ title: 基于mykernel的简单时间片轮转多道程序内核代码分析
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/13提后运行.png)
 
+####  二，实验心得
+
+* 熟悉存储程序计算机 
+* 加深函数调用堆栈，高级语言得以运行的基础 
+* 了解中断多道程序操作系统的进程切换条件
