--- a/_posts/2019-3-12-linux实验.md
+++ b/_posts/2019-3-12-linux实验.md
@@ -10,7 +10,7 @@ title: 基于mykernel的简单时间片轮转多道程序内核代码分析
 
 ## 基于mykernel的简单时间片轮转多道程序内核代码分析
 
-#### 一，实验过程
+### 一，实验过程
 
 * **1，实验准备**
   * 实验环境：实验楼<http://www.shiyanlou.com/courses/195>提供的虚拟机
@@ -73,7 +73,7 @@ title: 基于mykernel的简单时间片轮转多道程序内核代码分析
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/13提后运行.png)
 
-####  二，实验心得
+###  二，实验心得
 
 * 熟悉存储程序计算机 
 * 加深函数调用堆栈，高级语言得以运行的基础 
