--- a/_posts/2019-3-12-linuxLab1.md
+++ b/_posts/2019-3-12-linuxLab1.md
@@ -71,7 +71,11 @@ title: 基于mykernel的简单时间片轮转多道程序内核代码分析
 
 ![结果](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/12改错后运行qemu.png)
 
+
+
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/13提后运行.png)
+
+结果分析：显示了进程1,进程3和进程0之间的来回切换。
 
 ###  二，实验心得
 
