--- a/_posts/2019-03-07-Eclipse使用心得.md
+++ b/_posts/2019-03-07-Eclipse使用心得.md
@@ -11,4 +11,8 @@ Eclipse一些使用经验的记录
 ##### 1,快捷键的记录XPHS
 
 > **Ctrl+Shift+T** : Open Type （查找目标类、接口等）
+>
+> **Alt+shift+L**：自动生成返回值对象（鼠标选中new语句全部，然后输入此键即可）
+>
+>
 
