--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -13,3 +13,23 @@ mybatis简要记录
 ![mybatis](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程.png)
 
 ![mybatis](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程2.pn)
+
+##### 2，具体简单代码
+
+``` java
+//创建SqlSessionFactoryBuilder对象
+		SqlSessionFactoryBuilder ssb=new SqlSessionFactoryBuilder();
+		//创建核心配置文件的输入流
+		InputStream inputStream = Resources.getResourceAsStream("SqlMapConfig.xml");
+		//通过输入流创建SqlSessionFactory对象
+		SqlSessionFactory sqlSessionFactory = ssb.build(inputStream);
+		//通过openSession（），创建SqlSession对象
+		SqlSession sqlSession = sqlSessionFactory.openSession();
+		//执行查询
+		User user = sqlSession.selectOne("getUserById",1);
+		//输出结果
+		System.out.println(user);
+		//释放资源
+		sqlSession.close();
+```
+
