--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -33,3 +33,12 @@ mybatis简要记录
 		sqlSession.close();
 ```
 
+##### 3,流程原理阐述
+
+>SqlSessionFactoryBuilder通过类名就可以看出这个类的主要作用就是创建一个SqlSessionFactory
+>
+>通过输入mybatis配置文件的字节流或者字符流，生成XMLConfigBuilder
+>
+>XMLConfigBuilder创建一个Configuration，Configuration这个类中包含了mybatis的配置的一切信
+>
+>mybatis进行的所有操作都需要根据Configuration中的信息来进行
