--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -10,9 +10,9 @@ mybatis简要记录
 
 ##### 1，mybatis执行流程图
 
-![mybatis](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程.png)
+![mybatis](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程1.png)
 
-![mybatis](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程2.pn)
+![mybatis1](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程2.pn)
 
 ##### 2，具体简单代码
 
