--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -12,7 +12,7 @@ mybatis简要记录
 
 ![mybatis](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程1.png)
 
-![mybatis1](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程2.pn)
+![mybaa](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程2.png)
 
 ##### 2，具体简单代码
 
