--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -8,13 +8,13 @@ mybatis简要记录
 
 ## mybatis宝典
 
-##### 1，mybatis执行流程图
+## 1，mybatis执行流程图
 
 ![mybatis](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程1.png)
 
 ![mybaa](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/mybatis流程2.png)
 
-##### 2，具体简单代码
+## 2，具体简单代码
 
 ``` java
 //创建SqlSessionFactoryBuilder对象
@@ -33,7 +33,7 @@ mybatis简要记录
 		sqlSession.close();
 ```
 
-##### 3,流程原理阐述
+## 3,流程原理阐述
 
 >SqlSessionFactoryBuilder通过类名就可以看出这个类的主要作用就是创建一个SqlSessionFactory
 >
