--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -42,3 +42,36 @@ mybatis简要记录
 >XMLConfigBuilder创建一个Configuration，Configuration这个类中包含了mybatis的配置的一切信
 >
 >mybatis进行的所有操作都需要根据Configuration中的信息来进行
+
+## 4，xml细节
+
+**a,属性名符号，是`而不是'**
+
+```xml
+<insert id="insertUserUuid" parameterType="com.rody.mybatis.pojo.User" useGeneratedKeys="true" keyProperty="id">
+	<selectKey keyProperty="uuid2" resultType="String" order="BEFORE">
+		SELECT UUID()
+	</selectKey>    
+		INSERT INTO `mybatis`.`user`
+	(`username`,`birthday`,`sex`,`address`,`uuid2`)
+    <!-- 这里的属性名符号，是`而不是' -->
+	VALUES (#{username},#{birthday},#{sex},#{address},#{uuid2})
+	</insert>
+```
+
+**b,在xml mapper中的sql语句，不能用逗号**
+
+```xml
+<update id="updateUserInfo" parameterType="com.rody.mybatis.pojo.User" >
+	     update `mybatis`.`user`
+	     set 
+         username=#{username}
+	     where id=#{id}
+	</update>
+```
+
+**c,xml的delete操作只能删除数据库中的最后一行**
+
+![01patch](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/delete.png)
+
+![01patch](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/delete1.png)
