--- a/_posts/2019-03-07-Eclipse使用心得.md
+++ b/_posts/2019-03-07-Eclipse使用心得.md
@@ -14,5 +14,7 @@ Eclipse一些使用经验的记录
 >
 > **Alt+shift+L**：自动生成返回值对象（鼠标选中new语句全部，然后输入此键即可）
 >
+> **多方法类构造test测试类**：选中类—>new—>other—>输入test—>选择Junit  test case
+>
 >
 
