--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -75,3 +75,7 @@ mybatis简要记录
 ![01patch](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/delete.png)
 
 ![01patch](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/delete1.png)
+
+**d,config和包目录下具有相同的xml文件件**
+
+>若包下有相同名称的类文件，则对应测试类先匹配的是包下的xml文件
