--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -79,3 +79,31 @@ mybatis简要记录
 **d,config和包目录下具有相同的xml文件件**
 
 >若包下有相同名称的类文件，则对应测试类先匹配的是包下的xml文件
+
+**e,xml文件中的sql语句中变量与pojo类中的变量名不一致**
+
+```sql
+	  <select id="getOrderList" resultType="order">  
+			<!-- 这里的oder因为有别名设置，可以小写o -->
+		 	select id,user_id userId,number,createtime,note
+	  		from `order`
+	  </select> 
+```
+
+ >解决方法：在select语句中添加别名
+
+**f,设置where语句时，String类型的属性配置需要用双引号**
+
+```xml
+		<where>
+			<if test="username!=null and username!=''">
+			and username like '%${username}%' 
+            <!-- 这里的拼接属性需要用单引号'而不是`来设置 -->
+			</if>
+			<if test="sex!=null and sex!=''">
+			and sex=#{sex}</if>
+		</where>
+```
+
+
+
