--- a/_posts/2019-03-12-linuxLab2.md
+++ b/_posts/2019-03-12-linuxLab2.md
@@ -61,7 +61,7 @@ title: 举例跟踪分析Linux内核5.0系统调用处理过程
 
 **c**,制作根文件系统，从孟老师github上下载内核文件
 
->sudo apt-get install gcc-multilib//必要步骤
+>sudo apt-get install gcc-multilib
 >
 >cd ..
 >mkdir rootfs
@@ -70,14 +70,10 @@ title: 举例跟踪分析Linux内核5.0系统调用处理过程
 >gcc -pthread -o init linktable.c menu.c test.c -m32 -static
 >cd ../rootfs
 >cp ../menu/init ./
->
->find . | cpio -o -Hnewc | gzip -9 > ../rootfs.img
 
 **d**,编译
 
 > qemu -kernel linux-5.0/arch/x86/boot/bzImage -initrd rootfs.img -s -S -append nokaslr
-
-结果如图：
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/4.png)
 
@@ -85,19 +81,17 @@ title: 举例跟踪分析Linux内核5.0系统调用处理过程
 
 > make menuconfig
 
-结果如图：
-
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/5.png)
 
 提示：若窗口太小可能会报错
 
->qemu -kernel linux-5.0/arch/x86/boot/bzImage -initrd rootfs.img -s -S -append nokaslr
-
 **跟踪调试内核启动**
+
+>qemu -kernel linux-5.0/arch/x86/boot/bzImage -initrd rootfs.img -s -S -append nokaslr
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/6.png)
 
-使用gdb打开调试工具
+**使用gdb打开调试工具**
 
 > gdb 
 > (gdb)file linux-5.0/vmlinux 
@@ -146,7 +140,7 @@ int main()
 }
 ```
 
-**程序运行时**，pause会使当前的进程进入睡眠状态，直到我们由定时器alarm向该 signal发送SIGALRM信号，进程才会被唤醒，并处理信号，处理完信号后pause函数才返回，并继续运行该程序，具体情况如下图所示：
+**程序结果分析**，pause会使当前的进程进入睡眠状态，直到我们由定时器alarm向该 signal发送SIGALRM信号，进程才会被唤醒，并处理信号，处理完信号后pause函数才返回，并继续运行该程序，具体情况如下图所示：
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/9.png)
 
