--- a/_posts/2019-03-12-linuxLab2.md
+++ b/_posts/2019-03-12-linuxLab2.md
@@ -85,13 +85,13 @@ title: 举例跟踪分析Linux内核5.0系统调用处理过程
 
 提示：若窗口太小可能会报错
 
-**跟踪调试内核启动**
+**f**,跟踪调试内核启动
 
 >qemu -kernel linux-5.0/arch/x86/boot/bzImage -initrd rootfs.img -s -S -append nokaslr
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/6.png)
 
-**使用gdb打开调试工具**
+**g**,使用gdb打开调试工具
 
 > gdb 
 > (gdb)file linux-5.0/vmlinux 
@@ -105,7 +105,7 @@ title: 举例跟踪分析Linux内核5.0系统调用处理过程
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/8.png)
 
-说明：pause()会令目前的进程暂停（进入睡眠状态），直至信号（signal）所中断。
+**说明**：pause()会令目前的进程暂停（进入睡眠状态），直至信号（signal）所中断。
 返回值：只返回-1
 于是修改test.c中的代码，添加一个调用pause的代码
 
