--- a/_posts/2019-03-09-mybatis.md
+++ b/_posts/2019-03-09-mybatis.md
@@ -105,5 +105,43 @@ mybatis简要记录
 		</where>
 ```
 
+## 5，错误解决
 
+**a，Error creating bean with name 'SqlSessionFactory'**
 
+> org.springframework.beans.factory.BeanCreationException: 
+>
+> `Error creating bean with name 'SqlSessionFactory' defined in class path resource [applicationContext.xml]`
+>
+> Invocation of init method failed; nested exception is java.io.FileNotFoundException: class path resource [classpath：SqlMapConfig.xml] cannot be opened because it does not exist
+
+这里是applicationContext.xml文件中的SqlSessionFactory配置出错，注意classpath后的是英文格式下的冒号
+
+``` XML
+<!-- SqlSessionFactoryBean配置 -->
+	<bean id="SqlSessionFactory" class="org.mybatis.spring.SqlSessionFactoryBean">
+		<property name="dataSource" ref="dataSource"/>
+		<!-- 加载核心配置文件 -->
+		<property name="configLocation" value="classpath:SqlMapConfig.xml"/>
+		<!-- 别名包扫描 -->
+		<property name="typeAliasesPackage" value="com.rody.mybatis.pojo"></property>
+	</bean>
+```
+
+**b，org.mybatis.spring.MyBatisSystemException: Error querying database.  Cause: org.springframework.jdbc.CannotGetJdbcConnectionException:` Could not get JDBC Connection`; nested exception is org.apache.commons.dbcp.SQLNestedException: Cannot load JDBC driver class 'com.mysql.cj.jdbc.Driver''**
+
+> 错误分析：
+>
+> `不能加载驱动`
+>
+> `mysql驱动没有找到：解决方法，到oracle下载mysql对应版本的驱动`
+>
+> `没有对应的jar包，mysql版本与connecter jar包不对应`
+
+最后发现，自己的mysql-connector-java驱动包版本不对
+
+> 查询mysql的版本，在navicat中用新建查询命令：select version() from dual
+
+![mybatis](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/sqlversion.png)
+
+然后到Oracle下载对应的驱动，我的是**Mysql8.0.11**对应的**mysql-connector-java-8.0.13.jar**，添加到工程lib，并build path即可
