--- a/_posts/2019-01-10-java基础.md
+++ b/_posts/2019-01-10-java基础.md
@@ -22,7 +22,7 @@ java基础知识点
 
 ### 2，关于String   s2=new   String( "Hello ")创建几个对象的分析
 
-[借鉴的一篇经典博客解释][https://www.cnblogs.com/xuxinstyle/p/9345647.html]
+[借鉴的一篇经典博客解释](https://www.cnblogs.com/xuxinstyle/p/9345647.html)
 
 > 视情况而定，当常量池中没有“Hello”对象时是创建两个，一个存放在常量池中，另一个存放在堆（内存）中（new String 产生）
 >
