--- a/_posts/2019-01-10-java基础.md
+++ b/_posts/2019-01-10-java基础.md
@@ -55,3 +55,126 @@ public static void main(String[] args) {
 ```
 
 ![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/java3.png)
+
+### 4,抽象类和接口
+
+[讲解得很好地一篇博客](https://blog.csdn.net/chenssy/article/details/12858267)
+
+###  5，重载和重写
+
+* **重载**
+
+> 概念：对于同一个类，如果这个类里面有两个或者多个重名的方法，但是方法的参数个数、类型、顺序至少有一个不一样，这时候局构成方法重载
+>
+> 作用：方法重载就是对不同数据类型的的数据实现相似的操作
+>
+> 说明：在Test类中有两个方法，名字都相同，都是a。在调用方法a时，如果不传参数，则系统会自动调用第一个方法a；如果传入一个 int 类型的参数，则系统调用第二个方法a
+>
+>
+
+```java
+//example1
+public class Test{  
+  public void a( ){  
+   };  
+   public void a( int i){  
+   };  
+}  
+//example2
+public class Test{  
+  public void a(int i,String j){  
+  }  
+  public class a(String j,int i){  
+  }  
+}  
+```
+
+* **重写**
+
+> 概念：当一个子类继承一父类，而子类中的方法与父类中的方法的名称，参数个数、类型都完全一致时，就称子类中的这个方法重写了父类中的方法。`重写也是覆盖 override`
+>
+> 前提：需要有继承关系
+>
+> 特点：当子类重写了父类的函数，那么子类的对象如果调用该函数，一定调用的是重写过后的函数；可以通过super关键字进行父类的重写函数的调用；继承可以使得子类增强父类的方法
+>
+> 细节：
+>
+>  1函数名必须相同
+>
+> 2参数列表必须相同
+>
+> 3子类重写父类的函数的时候，函数的访问权限必须大于等于父类的函数的访问权限否则编译报错
+>
+> 4子类重写父类的函数的时候，返回值类型必须是父类函数的返回值类型或该返回值类型的子类，不能返回比父类更大的数据类型
+
+```java
+//examples
+class Animal{  
+    int x=1;  
+    String name;  
+      
+    void eat(){  
+        System.out.println("吃东西");  
+    }  
+    void shout(){  
+        System.out.println("我是动物");  
+    }  
+}  
+  
+class Dog extends Animal{  
+      
+      
+    void eat(){  
+        System.out.println("啃骨头");  
+    }  
+    void shout(){  
+        System.out.println("旺旺");  
+    }  
+    void eat(String food){  
+        System.out.println("吃："+food);  
+    }  
+}  
+class Cat extends Animal{  
+  
+    void eat(){  
+        System.out.println("吃老鼠");  
+    }  
+    void shout(){  
+        System.out.println("喵喵");  
+    }  
+}  
+  
+class Demo9{  
+  
+    public static void main(String[] args){  
+        Dog d=new Dog();  
+        d.shout();  
+        d.eat();  
+          
+        Cat c=new Cat();  
+        c.shout();  
+        c.eat();  
+        System.out.println();  
+        }  
+//原文：https://blog.csdn.net/qq_32575047/article/details/79949823 
+
+```
+
+* **重载和重写的不同**
+
+> 1：重载(overload)：  
+>
+>  1：前提： 所有的重载函数必须在同一个类中
+>
+>  2：特点： 函数名相同，参数列表不同，与其他的无关(访问控制符、返回值类型)
+>
+>  3：不同：个数不同 、 顺序不同、 类型不同
+>
+>
+>
+> 2：重写(override)：
+>
+> 1：前提： 继承
+>
+>  2：特点：函数名必须相同、参数列表必须相同;子类的返回值类型要等于或者小于父类的返回值类型
+>
