--- a/_posts/2019-01-10-java基础.md
+++ b/_posts/2019-01-10-java基础.md
@@ -62,7 +62,7 @@ public static void main(String[] args) {
 
 ###  5，重载和重写
 
-* **重载**
+##### **a,重载**
 
 > 概念：对于同一个类，如果这个类里面有两个或者多个重名的方法，但是方法的参数个数、类型、顺序至少有一个不一样，这时候局构成方法重载
 >
@@ -89,7 +89,7 @@ public class Test{
 }  
 ```
 
-* **重写**
+##### **b,重写**
 
 > 概念：当一个子类继承一父类，而子类中的方法与父类中的方法的名称，参数个数、类型都完全一致时，就称子类中的这个方法重写了父类中的方法。`重写也是覆盖 override`
 >
@@ -157,10 +157,9 @@ class Demo9{  
         System.out.println();  
         }  
 //原文：https://blog.csdn.net/qq_32575047/article/details/79949823 
-
 ```
 
-* **重载和重写的不同**
+##### **c,重载和重写的不同**
 
 > 1：重载(overload)：  
 >
@@ -178,3 +177,8 @@ class Demo9{  
 >
 >  2：特点：函数名必须相同、参数列表必须相同;子类的返回值类型要等于或者小于父类的返回值类型
 >
+
+##### **d,构造器能否被重写**
+
+> 构造器是不能被继承的，因为每个类的类名都不相同，而构造器名称与类名相同，所以根本谈不上继承
+> 又由于构造器不能继承，所以就不能被重写。但是，在同一个类中，构造器是可以被重载的
