--- a/_posts/2019-01-10-java基础.md
+++ b/_posts/2019-01-10-java基础.md
@@ -109,53 +109,54 @@ public class Test{
 
 ```java
 //examples
-class Animal{  
-    int x=1;  
-    String name;  
-      
-    void eat(){  
-        System.out.println("吃东西");  
-    }  
-    void shout(){  
-        System.out.println("我是动物");  
-    }  
-}  
-  
-class Dog extends Animal{  
-      
-      
-    void eat(){  
-        System.out.println("啃骨头");  
-    }  
-    void shout(){  
-        System.out.println("旺旺");  
-    }  
-    void eat(String food){  
-        System.out.println("吃："+food);  
-    }  
-}  
-class Cat extends Animal{  
-  
-    void eat(){  
-        System.out.println("吃老鼠");  
-    }  
-    void shout(){  
-        System.out.println("喵喵");  
-    }  
-}  
-  
-class Demo9{  
-  
-    public static void main(String[] args){  
-        Dog d=new Dog();  
-        d.shout();  
-        d.eat();  
-          
-        Cat c=new Cat();  
-        c.shout();  
-        c.eat();  
-        System.out.println();  
-        }  
+
+class Animal{
+	int x=1;
+	String name;
+	
+	void eat(){
+		System.out.println("吃东西");
+	}
+	void shout(){
+		System.out.println("我是动物");
+	}
+}
+ 
+class Dog extends Animal{
+	
+	
+	void eat(){
+		System.out.println("啃骨头");
+	}
+	void shout(){
+		System.out.println("旺旺");
+	}
+	void eat(String food){
+		System.out.println("吃："+food);
+	}
+}
+class Cat extends Animal{
+ 
+	void eat(){
+		System.out.println("吃老鼠");
+	}
+	void shout(){
+		System.out.println("喵喵");
+	}
+}
+ 
+class Demo9{
+ 
+	public static void main(String[] args){
+		Dog d=new Dog();
+		d.shout();
+		d.eat();
+		
+		Cat c=new Cat();
+		c.shout();
+		c.eat();
+		System.out.println();
+     	}
 //原文：https://blog.csdn.net/qq_32575047/article/details/79949823 
 ```
 
@@ -163,19 +164,19 @@ class Demo9{  
 
 > 1：重载(overload)：  
 >
->  1：前提： 所有的重载函数必须在同一个类中
+> 前提： 所有的重载函数必须在同一个类中
 >
->  2：特点： 函数名相同，参数列表不同，与其他的无关(访问控制符、返回值类型)
+> 特点： 函数名相同，参数列表不同，与其他的无关(访问控制符、返回值类型)
 >
->  3：不同：个数不同 、 顺序不同、 类型不同
+> 不同：个数不同 、 顺序不同、 类型不同
 >
 >
 >
-> 2：重写(override)：
+> 重写(override)：
 >
-> 1：前提： 继承
+> 前提： 继承
 >
->  2：特点：函数名必须相同、参数列表必须相同;子类的返回值类型要等于或者小于父类的返回值类型
+>  特点：函数名必须相同、参数列表必须相同;子类的返回值类型要等于或者小于父类的返回值类型
 >
 
 ##### **d,构造器能否被重写**
