--- a/_posts/2019-03-06-JVM.md
+++ b/_posts/2019-03-06-JVM.md
@@ -146,7 +146,7 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
 		  System.out.println(str3 == str4);//false
 		  System.out.println(str3 == str5);//true
 		  System.out.println(str4 == str5);//false
-String s1 = new String("abc");这句话创建了几个对象？
+String s1 = new String("abc");//这句话创建了几个对象？
 ```
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x18.png)
@@ -208,7 +208,7 @@ Integer缓存源代码
 
 Integer更经典问题
 
-```
+```java
   Integer i1 = 40;
   Integer i2 = 40;
   Integer i3 = 0;
@@ -232,4 +232,4 @@ Integer更经典问题
   40=i5+i6   true
 ```
 
-解释:语句i4 == i5 + i6，因为+这个操作符不适用于Integer对象，首先i5和i6进行自动拆箱操作，进行数值相加，即i4 == 40。然后Integer对象无法与数值进行直接比较，所以i4自动拆箱转为int值40，最终这条语句转为40 == 40进行数值比较。
+**解释**:语句i4 == i5 + i6，因为+这个操作符不适用于Integer对象，首先i5和i6进行自动拆箱操作，进行数值相加，即i4 == 40。然后Integer对象无法与数值进行直接比较，所以i4自动拆箱转为int值40，最终这条语句转为40 == 40进行数值比较。
