--- a/_posts/2019-03-06-JVM.md
+++ b/_posts/2019-03-06-JVM.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title: 简单理解java虚拟机
-author: Chris Rody菜鸟学习java虚拟机
+title: 简单理解JVM
+author: Chris Rody
 ---
+
+菜鸟学习java虚拟机
 
 ##  JVM
 
@@ -10,10 +12,8 @@ author: Chris Rody菜鸟学习java虚拟机
 
 [本笔记de博客来源](https://juejin.im/post/5b7d69e4e51d4538ca5730cb)
 
----
+基本问题：
 
-> 基本问题：
->
 > - **介绍下 Java 内存区域（运行时数据区）**
 > - **Java 对象的创建过程（五步，建议能默写出来并且要知道每一步虚拟机做了什么）**
 > - **对象的访问定位的两种方式（句柄和直接指针两种方式）**
