--- a/_posts/2019-01-15-git命令记录.md
+++ b/_posts/2019-01-15-git命令记录.md
@@ -8,10 +8,72 @@ author: Chris Rody
 
 ##  git命令记录
 
-**克隆**：git clone +【地址】+ 【文件夹】
+> **克隆**：git clone +【地址】+ 【文件夹】
+>
+> **添加工作区内容到暂存区**：git add .
+>
+> **提交内容到本地仓库**：git commit -m "注释内容"
+>
+> **远程同步**：git push -u origin master
+>
+> **跳过使用暂存区域更新的方式** : git commit -a -m "代码提交信息"。 git commit加上 -a选项，Git 就会自动把所有已经跟踪过的文件暂存起来一并提交，从而跳过 git add步骤。
 
-**添加工作区内容到暂存区**：git add .
+### 推送改动到远程仓库
 
-**提交内容到本地仓库**：git commit -m "注释内容"
+- 如果你还没有克隆现有仓库，并欲将你的仓库连接到某个远程服务器，你可以使用如下命令添加：`git remote add origin <server>` ,比如我们要让本地的一个仓库和 Github 上创建的一个仓库关联可以这样`git remote add origin https://github.com/Snailclimb/test.git` 
 
-**远程同步**：git push -u origin master
+- 将这些改动提交到远端仓库：`git push origin master` (可以把 *master* 换成你想要推送的任何分支)
+
+  如此你就能够将你的改动推送到所添加的服务器上去了
+
+### 分支
+
+分支是用来将特性开发绝缘开来的。在你创建仓库的时候，*master* 是“默认的”分支。在其他分支上进行开发，完成后再将它们合并到主分支上。
+
+我们通常在开发新功能、修复一个紧急 bug 等等时候会选择创建分支。单分支开发好还是多分支开发好，还是要看具体场景来说。
+
+创建一个名字叫做 test 的分支
+
+```console
+git branch test
+```
+
+切换当前分支到 test（当你切换分支的时候，Git 会重置你的工作目录，使其看起来像回到了你在那个分支上最后一次提交的样子。 Git 会自动添加、删除、修改文件以确保此时你的工作目录和这个分支最后一次提交时的样子一模一样）
+
+```console
+git checkout test
+```
+
+<div align="center">  
+<img src="https://my-blog-to-use.oss-cn-beijing.aliyuncs.com/2019-3切换分支.png" width="500px"/>
+</div>
+
+你也可以直接这样创建分支并切换过去(上面两条命令的合写)
+
+```console
+git checkout -b feature_x
+```
+
+切换到主分支
+
+```
+git checkout master
+```
+
+合并分支(可能会有冲突)
+
+```java
+ git merge test
+```
+
+把新建的分支删掉
+
+```
+git branch -d feature_x
+```
+
+将分支推送到远端仓库（推送成功后其他人可见）：
+
+```
+git push origin 
+```
