--- a/_posts/2019-01-15-git命令记录.md
+++ b/_posts/2019-01-15-git命令记录.md
@@ -8,6 +8,34 @@ author: Chris Rody
 
 ##  git命令记录
 
+### git连接远程仓库
+
+`方式1`
+
+> #进入本地仓库文件夹，打开cmd或者git bash或者powershell
+>
+> #初始化Git仓库 
+> 1，git init
+> #本地git仓库关联GitHub仓库 
+>
+> 2，git remote add origin https://github.com/rodyyyy/royo.git（推荐使用，无ssh密码等）
+>
+> 或者git remote add origin git@github.com:rodyyyy/royo.git
+>
+> 3，git all . 
+>
+> 4，git commit -m "description"
+>
+> 5，git push -u origin master
+
+![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g2.png)
+
+![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g2.png)
+
+![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g3.png)
+
+`方式2`
+
 > **克隆**：git clone +【地址】+ 【文件夹】
 >
 > **添加工作区内容到暂存区**：git add .
@@ -77,4 +105,16 @@ git branch -d feature_x
 ```
 git push origin 
 ```
+
+### 本地“三棵树”
+
+你的本地仓库由 git 维护的三棵“树”组成。第一个是你的 `工作目录`，它持有实际文件；第二个是 `暂存区（Index）`，它像个缓存区域，临时保存你的改动；最后是 `HEAD`，它指向你最后一次提交的结果。
+
+![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g1.png)
+
+### 参考
+
+[简明git解释](<http://rogerdudler.github.io/git-guide/index.zh.html>)
+
+[分支git解释](<https://git-scm.com/book/zh/v1/Git-%E5%88%86%E6%94%AF-%E5%88%86%E6%94%AF%E7%9A%84%E6%96%B0%E5%BB%BA%E4%B8%8E%E5%90%88%E5%B9%B6>)
 
