--- a/_posts/2019-01-15-git命令记录.md
+++ b/_posts/2019-01-15-git命令记录.md
@@ -30,9 +30,9 @@ author: Chris Rody
 
 ![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g2.png)
 
-![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g2.png)
-
 ![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g3.png)
+
+![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g4.png)
 
 `方式2`
 
@@ -62,15 +62,11 @@ author: Chris Rody
 
 创建一个名字叫做 test 的分支
 
-```console
-git branch test
-```
+>  git branch test
 
 切换当前分支到 test（当你切换分支的时候，Git 会重置你的工作目录，使其看起来像回到了你在那个分支上最后一次提交的样子。 Git 会自动添加、删除、修改文件以确保此时你的工作目录和这个分支最后一次提交时的样子一模一样）
 
-```console
-git checkout test
-```
+>  git checkout test
 
 <div align="center">  
 <img src="https://my-blog-to-use.oss-cn-beijing.aliyuncs.com/2019-3切换分支.png" width="500px"/>
@@ -78,33 +74,23 @@ git checkout test
 
 你也可以直接这样创建分支并切换过去(上面两条命令的合写)
 
-```console
-git checkout -b feature_x
-```
+>  git checkout -b feature_x
 
 切换到主分支
 
-```
-git checkout master
-```
+>  git checkout master
 
 合并分支(可能会有冲突)
 
-```java
- git merge test
-```
+>  git merge test
 
 把新建的分支删掉
 
-```
-git branch -d feature_x
-```
+>  git branch -d feature_x
 
 将分支推送到远端仓库（推送成功后其他人可见）：
 
-```
-git push origin 
-```
+>  git push origin 
 
 ### 本地“三棵树”
 
