--- a/_posts/2019-01-15-git命令记录.md
+++ b/_posts/2019-01-15-git命令记录.md
@@ -8,7 +8,7 @@ author: Chris Rody
 
 ##  git命令记录
 
-### git连接远程仓库
+### 1,git连接远程仓库
 
 `方式1`
 
@@ -46,7 +46,7 @@ author: Chris Rody
 >
 > **跳过使用暂存区域更新的方式** : git commit -a -m "代码提交信息"。 git commit加上 -a选项，Git 就会自动把所有已经跟踪过的文件暂存起来一并提交，从而跳过 git add步骤。
 
-### 推送改动到远程仓库
+### 2,推送改动到远程仓库
 
 - 如果你还没有克隆现有仓库，并欲将你的仓库连接到某个远程服务器，你可以使用如下命令添加：`git remote add origin <server>` ,比如我们要让本地的一个仓库和 Github 上创建的一个仓库关联可以这样`git remote add origin https://github.com/Snailclimb/test.git` 
 
@@ -54,7 +54,7 @@ author: Chris Rody
 
   如此你就能够将你的改动推送到所添加的服务器上去了
 
-### 分支
+### 3,分支
 
 分支是用来将特性开发绝缘开来的。在你创建仓库的时候，*master* 是“默认的”分支。在其他分支上进行开发，完成后再将它们合并到主分支上。
 
@@ -92,13 +92,13 @@ author: Chris Rody
 
 >  git push origin 
 
-### 本地“三棵树”
+### 4,本地“三棵树”
 
 你的本地仓库由 git 维护的三棵“树”组成。第一个是你的 `工作目录`，它持有实际文件；第二个是 `暂存区（Index）`，它像个缓存区域，临时保存你的改动；最后是 `HEAD`，它指向你最后一次提交的结果。
 
 ![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g1.png)
 
-### 参考
+### 5,参考
 
 [简明git解释](<http://rogerdudler.github.io/git-guide/index.zh.html>)
 
