--- a/_posts/2019-01-10-java基础.md
+++ b/_posts/2019-01-10-java基础.md
@@ -63,30 +63,30 @@ public static void main(String[] args) {
 >  `抽象类`
 >
 >          1、抽象类不能被实例化，实例化的工作应该交由它的子类来完成，它只需要有一个引用即可。
->     
+>         
 >          2、抽象方法必须由子类来进行重写。
->     
+>         
 >          3、只要包含一个抽象方法的抽象类，该方法必须要定义成抽象类，不管是否还包含有其他方法。
->     
+>         
 >          4、抽象类中可以包含具体的方法，当然也可以不包含抽象方法。
->     
+>         
 >          5、子类中的抽象方法不能与父类的抽象方法同名。
->     
+>         
 >          6、abstract不能与final并列修饰同一个类。
->     
+>         
 >          7、abstract 不能与private、static、final或native并列修饰同一个方法。、
 > `接口`
 >
 >          1、个Interface的方所有法访问权限自动被声明为public。确切的说只能为public，当然你可以显示的声明为protected、private，但是编译会出错！
->     
+>         
 >          2、接口中可以定义“成员变量”，或者说是不可变的常量，因为接口中的“成员变量”会自动变为为public static final。可以通过类命名直接访问：ImplementClass.name。
->     
+>         
 >          3、接口中不存在实现的方法。
->     
+>         
 >          4、实现接口的非抽象类必须要实现该接口的所有方法。抽象类可以不用实现。
->     
+>         
 >          5、不能使用new操作符实例化一个接口，但可以声明一个接口变量，该变量必须引用（refer to)一个实现该接口的类的对象。可以使用 instanceof 检查一个对象是否实现了某个特定的接口。例如：if(anObject instanceof Comparable){}。
->     
+>         
 >          6、在实现多接口的时候一定要避免方法名的重复。
 
 ###  5，重载和重写
@@ -212,3 +212,10 @@ class Demo9{
 
 > 构造器是不能被继承的，因为每个类的类名都不相同，而构造器名称与类名相同，所以根本谈不上继承
 > 又由于构造器不能继承，所以就不能被重写。但是，在同一个类中，构造器是可以被重载的
+
+### 6，List
+
+> 1. 列表可包含任何数据类型的元素，单个列表中的元素无须全为同一类型。
+> 2.  **append()** 方法向列表的尾部添加一个新的元素。
+> 3.  列表是以类的形式实现的。“创建”列表实际上是将一个类实例化。因此，列表有多种方法可以操作。`extend()`方法只接受一个列表作为参数，并将该参数的每个元素都添加到原有的列表中。
+
