--- a/_posts/2019-01-15-git命令记录.md
+++ b/_posts/2019-01-15-git命令记录.md
@@ -104,3 +104,15 @@ author: Chris Rody
 
 [分支git解释](<https://git-scm.com/book/zh/v1/Git-%E5%88%86%E6%94%AF-%E5%88%86%E6%94%AF%E7%9A%84%E6%96%B0%E5%BB%BA%E4%B8%8E%E5%90%88%E5%B9%B6>)
 
+### 6，问题解决
+
+##### 1，Untracked files问题
+
+> Untracked files:
+> ​        ../images/x20.png
+> ​        ../images/x21.png
+
+解决：一般是shell命令没有在对应的文件包下
+
+##### 2，
+
