--- a/_posts/2019-03-20-Offer.md
+++ b/_posts/2019-03-20-Offer.md
@@ -17,6 +17,8 @@ int [][] array
 //length是数组的一种属性，不用加（）
 ```
 
+
+
 ### 2.0,ArrayList总结
 
 > ArrayList：动态数组类，ArrayList对象既有数组的特征，也有链表的特征；可以随时从中添加或者删除元素，ArrayList实现了接口类，可以动态改变大小
@@ -316,7 +318,45 @@ The new Vector(resized the vector) is: 
 > Vector中提供方法： 
 > public final synchronized Enumeration elements(); 
 
+### 2.2，java中Map,List与Set的区别
 
+参考：[java中Map,List与Set的区别](<https://blog.csdn.net/SpeedMe/article/details/22398395>)
+
+> `一、关系`
+>
+> Collection
+> --List：以特定顺序存储
+> --ArrayList、LinkList、Vector
+> --Set：不能包含重复的元素
+> --HashSet、TreeSet
+>
+> Map
+> --HashMap、HashTable、TreeMap
+>
+> `二、分别讲解`
+>
+> Collection：Collection是一个父接口，List和Set是继承自他的子接口，Collection是最基本的集合接口，Java SDK中不提供直接继承自Collection的类，而是提供继承自他子接口的类，如List何Set。所用的Collection类都支持一个Iterator()方法来遍历。
+> List：List接口是有序的，会精确的将元素插入到指定的位置，和下面的Set接口不同，List接口允许有相同元素
+> ArrayList：实现可变大小的数组，允许所有的元素，不是同步的，也就是没有同步方法
+> LinkList：允许null元素，通常在首部或者尾部操作，所以常被使用做堆栈(stack)、队列(queue)和双向队列(deque)
+> Vector：类似于ArrayList，但Vector是同步的，Stack继承自Vector
+> Set：是一种不包含重复元素的Collection接口
+> HashSet：不能有重复元素，底层是使用HashMap来实现的
+> Map：此接口实现的Key到Value的映射，一个Map中不能包含相同的Key，每个Key只能映射一个Value
+> HashTable：实现了一个Key-Value的哈希表，每一个非null元素都可作为Key或者Value，HashTable是同步的
+> HashMap：和HashTable的不同之处是，非同步的，且允许null元素的存在
+>
+> `三、Array和Arrays  Collection和Collections`
+>
+> Array：是所以随机访问一串对象中，最有效率的一种，但是元素类型必须相同，且容量固定无法改变。Arrays：此静态类专门操作array，提供搜索、排序、复制等静态方法
+> Collection：Java.util下的一个接口，是各种集合结构的父接口
+> Collections：Java.util下的一个专用静态类，他包含各种集合操作的静态方法，包括对集合的搜索、排序、线程安全等操作。
+>
+> 四、总结
+> 涉及到堆栈、队列等操作，使用List接口，快速插入和删除应使用LinkList，随机访问元素使用ArrayList单线程使用非同步类，多线程使用同步类
+> 注意对HashTable的操作，作为Key的对象要覆写equals和hashCode方法
+> 在各种Map中HashMap用于快速查找
+> 最常使用的是ArrayList、HashSet、HashMap、Array
 
 ### 3,栈的操作
 
