--- a/_posts/2019-03-20-Offer.md
+++ b/_posts/2019-03-20-Offer.md
@@ -6,7 +6,7 @@ author: Chris Rody
 
 算法记录
 
-##  算法SE
+##  算法
 
 ### 1,二维数组的行和列
 
@@ -336,27 +336,41 @@ The new Vector(resized the vector) is: 
 > `二、分别讲解`
 >
 > Collection：Collection是一个父接口，List和Set是继承自他的子接口，Collection是最基本的集合接口，Java SDK中不提供直接继承自Collection的类，而是提供继承自他子接口的类，如List何Set。所用的Collection类都支持一个Iterator()方法来遍历。
+>
 > List：List接口是有序的，会精确的将元素插入到指定的位置，和下面的Set接口不同，List接口允许有相同元素
+>
 > ArrayList：实现可变大小的数组，允许所有的元素，不是同步的，也就是没有同步方法
+>
 > LinkList：允许null元素，通常在首部或者尾部操作，所以常被使用做堆栈(stack)、队列(queue)和双向队列(deque)
+>
 > Vector：类似于ArrayList，但Vector是同步的，Stack继承自Vector
+>
 > Set：是一种不包含重复元素的Collection接口
+>
 > HashSet：不能有重复元素，底层是使用HashMap来实现的
+>
 > Map：此接口实现的Key到Value的映射，一个Map中不能包含相同的Key，每个Key只能映射一个Value
+>
 > HashTable：实现了一个Key-Value的哈希表，每一个非null元素都可作为Key或者Value，HashTable是同步的
+>
 > HashMap：和HashTable的不同之处是，非同步的，且允许null元素的存在
 >
 > `三、Array和Arrays  Collection和Collections`
 >
-> Array：是所以随机访问一串对象中，最有效率的一种，但是元素类型必须相同，且容量固定无法改变。Arrays：此静态类专门操作array，提供搜索、排序、复制等静态方法
+> Array：是所以随机访问一串对象中，最有效率的一种，但是元素类型必须相同，且容量固定无法改变。
+>
+> Arrays：此静态类专门操作array，提供搜索、排序、复制等静态方法
+>
 > Collection：Java.util下的一个接口，是各种集合结构的父接口
+>
 > Collections：Java.util下的一个专用静态类，他包含各种集合操作的静态方法，包括对集合的搜索、排序、线程安全等操作。
 >
 > 四、总结
 > 涉及到堆栈、队列等操作，使用List接口，快速插入和删除应使用LinkList，随机访问元素使用ArrayList单线程使用非同步类，多线程使用同步类
+>
 > 注意对HashTable的操作，作为Key的对象要覆写equals和hashCode方法
-> 在各种Map中HashMap用于快速查找
-> 最常使用的是ArrayList、HashSet、HashMap、Array
+>
+> 在各种Map中HashMap用于快速查找最常使用的是ArrayList、HashSet、HashMap、Array
 
 ##### 2.2.1 迭代器iterator的使用
 
@@ -366,11 +380,16 @@ The new Vector(resized the vector) is: 
 ​       	Java中的Iterator功能比较简单，并且只能单向移动：
 
 > (1) 使用方法iterator()要求容器返回一个Iterator。第一次调用Iterator的next()方法时，它返回序列的第一个元素。注意：iterator()方法是java.lang.Iterable接口,被Collection继承。
+>
 > (2) 使用next()获得序列中的下一个元素。
+>
 > (3) 使用hasNext()检查序列中是否还有元素。
+>
 > (4) 使用remove()将迭代器新返回的元素删除。
 >
-> Iterator是Java迭代器最简单的实现，为List设计的ListIterator具有更多的功能，它可以从两个方向遍历List，也可以从List中插入和删除元素。
+> Iterator是Java迭代器最简单的实现，为List设计的ListIterator具有更多的功能，它可以从两个方向遍历List，
+>
+> 也可以从List中插入和删除元素。
 
 `迭代器应用：`
 
