--- a/_posts/2019-03-20-Offer.md
+++ b/_posts/2019-03-20-Offer.md
@@ -402,7 +402,7 @@ The new Vector(resized the vector) is: 
   String str = (String)iter.next();
   System.out.println(str);
  }
- /*迭代器用于while循环
+ /*迭代器用于while循环*/
  Iterator iter = l.iterator();
  while(iter.hasNext()){
   String str = (String) iter.next();
