--- a/_posts/2019-03-10-DataBase.md
+++ b/_posts/2019-03-10-DataBase.md
@@ -55,15 +55,15 @@ public class JdbcTest {
 
 ![结果](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/数据库2.PNG)
 
-## 2，常用命令
+### 2，常用命令
 
->SELECT COUNT(1) FROM `user`  ：计算列表的总记录数
->
+> SELECT COUNT(1) FROM `user`  ：计算列表的总记录数
+
 >#{}：占位符，相当于jdbc的？
 >
 >${}：字符串拼接指令，如果入参为基本类型，{}内部只写value 
 
-* **往表中添加datetime类型的数据**
+##### 1，往表中添加datetime类型的数据
 
 ```sql
 insert into `order`
@@ -75,3 +75,7 @@ VALUES (29,5105,'2019-03-02 15:8:22' ,null),
 * 结果如下：
 
 ![结果](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/sql.png)
+
+##### 2，查询navicat的版本
+
+>select version() from dual;
