--- a/_posts/2019-03-07-Eclipse使用心得.md
+++ b/_posts/2019-03-07-Eclipse使用心得.md
@@ -16,5 +16,11 @@ Eclipse一些使用经验的记录
 >
 > **多方法类构造test测试类**：选中类—>new—>other—>输入test—>选择Junit  test case
 >
+>  **字体大小调整**，一处是控制台的字体，一处是主窗口
+>
+>     Window -> Preferences -> General -> Appearance -> Colors and Fonts -> Basic -> Text Font -> Edit 调节控制台字体大小
+>     
+>     Window -> Preferences -> General -> Appearance -> Colors and Fonts -> Java -> Java Editor Text Font -> Edit 调节主窗口字体大小
+>
 >
 
