--- a/_posts/2019-03-20-Offer.md
+++ b/_posts/2019-03-20-Offer.md
@@ -1113,3 +1113,11 @@ public void push(int node) {
 ##### 2，出栈顺序
 
 > 说明当栈不为空且栈顶数据和当前pop序列中的数据不相等时循环结束
+
+### 14，nextLine()的一些应用说明
+
+>当nextLine()和其他的Next()连用的时候，会出现自动读取之前输入的**回车键**作为nextLine结束符！
+>
+>nextLine()自动读取了被next()去掉的Enter作为他的结束符，所以没办法给s2从键盘输入值。经过验证，我发现其他的next的方法，如double nextDouble()  ， float nextFloat() ， int nextInt() 等与nextLine()连用时都存在这个问题，
+>
+>解决的办法：在每一个 next()、nextDouble()  、 nextFloat()、nextInt() 等语句之后加一个**nextLine()**语句，将被next()去掉的Enter结束符过滤掉。
