--- a/_posts/2019-01-10-java基础.md
+++ b/_posts/2019-01-10-java基础.md
@@ -219,3 +219,15 @@ class Demo9{
 > 2.  **append()** 方法向列表的尾部添加一个新的元素。
 > 3.  列表是以类的形式实现的。“创建”列表实际上是将一个类实例化。因此，列表有多种方法可以操作。`extend()`方法只接受一个列表作为参数，并将该参数的每个元素都添加到原有的列表中。
 
+### 7,forward和redirect的区别
+
+**转发是服务器行为，重定向是客户端行为**
+
+> **forward（转发）**：
+>
+> 是服务器请求资源,服务器直接访问目标地址的URL,把那个URL的响应内容读取过来,然后把这些内容再发给浏览器.浏览器根本不知道服务器发送的内容从哪里来的,因为这个跳转过程实在服务器实现的，并不是在客户端实现的所以客户端并不知道这个跳转动作，所以它的地址栏还是原来的地址.
+>
+> **redirect（重定向）**：
+>
+> 是服务端根据逻辑,发送一个状态码,告诉浏览器重新去请求那个地址.所以地址栏显示的是新的URL.
+
