--- a/_posts/2019-03-20-Offer.md
+++ b/_posts/2019-03-20-Offer.md
@@ -335,7 +335,7 @@ The new Vector(resized the vector) is: 
 >
 > `二、分别讲解`
 >
-> Collection：Collection是一个父接口，List和Set是继承自他的子接口，Collection是最基本的集合接口，Java SDK中不提供直接继承自Collection的类，而是提供继承自他子接口的类，如List何Set。所用的Collection类都支持一个Iterator()方法来遍历。
+> Collection：Collection是一个父接口，List和Set是继承自他的子接口，Collection是最基本的集合接口，Java JDK中不提供直接继承自Collection的类，而是提供继承自他子接口的类，如List和Set。所用的Collection类都支持一个Iterator()方法来遍历。
 >
 > List：List接口是有序的，会精确的将元素插入到指定的位置，和下面的Set接口不同，List接口允许有相同元素
 >
@@ -348,6 +348,8 @@ The new Vector(resized the vector) is: 
 > Set：是一种不包含重复元素的Collection接口
 >
 > HashSet：不能有重复元素，底层是使用HashMap来实现的
+>
+>
 >
 > Map：此接口实现的Key到Value的映射，一个Map中不能包含相同的Key，每个Key只能映射一个Value
 >
