--- a/_posts/2019-04-1-Linux操作记录.md
+++ b/_posts/2019-04-1-Linux操作记录.md
@@ -75,3 +75,4 @@ author: Chris Rody
 | -j   | 处理与 bz2 相关的操作  |
 | -J   | 处理与 xz 相关的操作   |
 
+[转载博客](<https://blog.dkvirus.top/Linux/%E6%96%87%E4%BB%B6%E6%89%93%E5%8C%85%E4%B8%8E%E5%8E%8B%E7%BC%A9/>)
