--- a/_posts/2019-03-07-Eclipse使用心得.md
+++ b/_posts/2019-03-07-Eclipse使用心得.md
@@ -22,5 +22,7 @@ Eclipse一些使用经验的记录
 >     
 >     Window -> Preferences -> General -> Appearance -> Colors and Fonts -> Java -> Java Editor Text Font -> Edit 调节主窗口字体大小
 >
+> 调出debug的透视图，包括变量图等
 >
+> Window—>show view—>variables或者在other中调出expression窗口	
 
