--- a/_posts/2019-03-20-Offer.md
+++ b/_posts/2019-03-20-Offer.md
@@ -355,7 +355,13 @@ The new Vector(resized the vector) is: 
 >
 > HashTable：实现了一个Key-Value的哈希表，每一个非null元素都可作为Key或者Value，HashTable是同步的
 >
-> HashMap：和HashTable的不同之处是，非同步的，且允许null元素的存在
+> HashMap：非同步的，且允许null元素的存在
+>
+> TreeMap:
+>
+> SortedMap:
+>
+> [map的典型：map的输出](<https://www.jianshu.com/p/32d1fea29145>)
 >
 > `三、Array和Arrays  Collection和Collections`
 >
@@ -1122,4 +1128,51 @@ public void push(int node) {
 >
 >nextLine()自动读取了被next()去掉的Enter作为他的结束符，所以没办法给s2从键盘输入值。经过验证，我发现其他的next的方法，如double nextDouble()  ， float nextFloat() ， int nextInt() 等与nextLine()连用时都存在这个问题，
 >
->解决的办法：在每一个 next()、nextDouble()  、 nextFloat()、nextInt() 等语句之后加一个**nextLine()**语句，将被next()去掉的Enter结束符过滤掉。
+>### 解决的办法：在每一个 next()、nextDouble()  、 nextFloat()、nextInt() 等语句之后加一个**nextLine()**语句，将被next()去掉的Enter结束符过滤掉。
+
+### 15，数据结构简单总结
+
+##### a，队列
+
+> 队列是数据结构中比较重要的一种类型，它支持 FIFO，尾部添加、头部删除（先进队列的元素先出队列），跟我们生活中的排队类似。
+
+单队列：
+
+![1556245019016](C:\Users\Lakers\AppData\Roaming\Typora\typora-user-images\1556245019016.png)
+
+![1556244786948](C:\Users\Lakers\AppData\Roaming\Typora\typora-user-images\1556244786948.png)
+
+循环队列：rear = (rear - size) % size
+
+![1556245091579](C:\Users\Lakers\AppData\Roaming\Typora\typora-user-images\1556245091579.png)
+
+队满标志：(rear+1)%size==front（会空一格）
+
+![1556246407968](C:\Users\Lakers\AppData\Roaming\Typora\typora-user-images\1556246407968.png)
+
+队列个数统计：
+
+当rear>front，个数等于rear-front
+
+当front>rear,个数等于rear-front+size
+
+**Java 集合中的 Queue** 继承自 [Collection 接口](http://blog.csdn.net/u011240877/article/details/52773577) ，Deque, LinkedList, PriorityQueue, BlockingQueue 等类都实现了它。Queue 用来存放 等待处理元素 的集合，这种场景一般用于缓冲、并发访问。
+
+添加：	add(  ) ,offer( )在尾部添加，不能加null元素
+
+删除：    remove(), poll() 删除并返回头部
+
+获取：    element(), peek() 获取但不删除
+
+### 16，数学函数
+
+Math.pow(a,3)：即等于求a的3次方，Math方法直接是在Java.lang
+
+Character.valueOf( )：输出字符的asc码值，0-48，A对应65，a对应97
+
+### 17，转移字符
+
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/lab.png)
+
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/lab2.png)
+
