--- a/_posts/2019-03-06-JVM.md
+++ b/_posts/2019-03-06-JVM.md
@@ -233,3 +233,21 @@ Integer更经典问题
 ```
 
 **解释**:语句i4 == i5 + i6，因为+这个操作符不适用于Integer对象，首先i5和i6进行自动拆箱操作，进行数值相加，即i4 == 40。然后Integer对象无法与数值进行直接比较，所以i4自动拆箱转为int值40，最终这条语句转为40 == 40进行数值比较。
+
+### 6，String.intern()
+
+例子1：
+
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x23.png)
+
+> S是指向堆里面对象的地址，S1是指向常量池里面的地址
+
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x24.png)
+
+>  jdk1.7，intern（）之后，常量池存的是S3的地址（即该实例的引用），S4在创建的时候根据地址找到了该对象，所以地址相同
+
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x25.png)
+
+> 具体补充如下：
+
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x26.png)
