--- a/_posts/2019-03-06-JVM.md
+++ b/_posts/2019-03-06-JVM.md
@@ -53,6 +53,12 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x5.png)
 
+![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x27.png)
+
+> 补充：
+>
+> 图所示的 eden区、s0区、s1区都属于新生代，tentired 区属于老年代。大部分情况，对象都会首先在 Eden 区域分配，在一次新生代垃圾回收后，如果对象还存活，则会进入 s0 或者 s1，并且对象的年龄还会加 1(Eden区->Survivor 区后对象的初始年龄变为1)，当它的年龄增加到一定程度（默认为15岁），就会被晋升到老年代中。对象晋升到老年代的年龄阈值，可以通过参数 `-XX:MaxTenuringThreshold` 来设置。
+
 ##### 5，方法区（公）
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x6.png)
@@ -84,13 +90,15 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
 在创建对象的时候有一个很重要的问题，就是线程安全，因为在实际开发过程中，创建对象是很频繁的事情，作为虚拟机来说，必须要保证线程是安全的，通常来讲，虚拟机采用两种方式来保证线程安全：
 
 - **CAS+失败重试：** CAS 是乐观锁的一种实现方式。所谓乐观锁就是，每次不加锁而是假设没有冲突而去完成某项操作，如果因为冲突失败就重试，直到成功为止。**虚拟机采用 CAS 配上失败重试的方式保证更新操作的原子性。**
-- **TLAB：** 为每一个线程预先在Eden区分配一块儿内存，JVM在给线程中的对象分配内存时，首先在TLAB分配，当对象大于TLAB中的剩余内存或TLAB的内存已用尽时，再采用上述的CAS进行内存分配
+- **TLAB（本地线程分配缓冲）：** （书上补充：把内存分配的动作按照线程划分在不同的空间之中进行，即每个线程在Java堆中预先分配一小块内存，即TLAB。哪个线程需要分配内存，就在哪个现成的TLAB上分配，只有TLAB用完并分配心得TLAB时才需要同步锁定。）为每一个线程预先在Eden区分配一块儿内存，JVM在给线程中的对象分配内存时，首先在TLAB分配，当对象大于TLAB中的剩余内存或TLAB的内存已用尽时，再采用上述的CAS进行内存分配。
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x12.png)
 
 ##### 4.2，对象的内存布局
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x13.png)
+
+##### 4.3，对象的访问定位
 
 建立对象就是为了使用对象，我们的Java程序通过栈上的 reference 数据来操作堆上的具体对象。对象的访问方式有虚拟机实现而定，目前主流的访问方式有**①使用句柄**和**②直接指针**两种：
 
@@ -251,3 +259,133 @@ Integer更经典问题
 > 具体补充如下：
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x26.png)
+
+### 7，内存区域
+
+* 运行时数据区域变化
+
+1，JDK1.8之前，运行区域如原始类型
+
+2，JDK1.8及以后，方法区变为**元空间**，元空间使用的是直接内存
+
+线程私有：
+
+1，程序计数器
+
+> 线程通过改变计数器的值来选取下一跳需要执行的指令，分支、循环、跳转、异常处理、县城恢复等功能都需要计数器来完成。
+>
+> 程序计数器是唯一一个不会出现OutOfMemoryError错误的内存区域
+
+2，虚拟机栈
+
+> 描述的是Java方法执行的内存模型，每次方法调用的数据都是通过栈传递的。Java内存可粗糙的分为堆内存和栈内存，其中栈就是现在说的虚拟机栈，或者说虚拟机栈中的局部变量表部分。
+>
+> 局部变量表中存放编译器可知的各种**基本类型数据、对象引用**
+
+3，本地方法栈
+
+> 虚拟机栈为虚拟机执行Java方法（字节码）服务
+>
+> 本地方法栈则为虚拟机使用到的Native方法服务
+
+线程公有：
+
+1，堆
+
+> 存放**对象实例、数组**
+
+2，方法区
+
+> 存放**已被虚拟机加载的类信息、常量、静态变量**，即编译器编译后的代码等数据。
+>
+> Hotpot虚拟机方法区被叫做**永久代**，
+
+* 运行时常量池
+
+是方法区的一部分，Class文件中除了有类的版本、字段、方法、接口等描述信息外，还有常量池信息（用于存放编译器生成的各种字面量和符号引用）
+
+JDK1.7之后版本的JVM将运行时常量池在方法区中移了出来，在Java堆中开辟了一块区域存放运行时常量池
+
+3，直接内存
+
+JDK1.4中新加入了NIO类，引入了一种基于通道与缓存区的I/O方式，直接使用Native函数分配堆外内存，避免了在Java堆和Native堆之间来回复制数据。
+
+### 8，判断对象是否存活的两种算法
+
+* 引用计数算法
+
+给对象添加一个引用计数器，引用时加一，引用失效时减一。当引用计数器为0时，对象就是不可能再被使用的。
+
+* 可达性分析算法
+
+通过一系列称为“GC Roots”的对象作为起始点，从这些节点向下搜索，路径称为引用链，当一个对象到GC Roots没有任何引用链相连时，则这个对象是不可用的。
+
+### 9，引用（强、软、弱、虚）
+
+* 强引用(正常new的对象)
+
+程序代码中普遍出现的，类似Object obj=new Object（），只要强引用还存在，垃圾收集器永远不会回收掉被引用的对象。
+
+* 软引用(SoftReference)
+
+程序中用来描述一些还有用但非必需的对象，内存溢出之前，将会把这些对象列进回收范围之中进行第二次回收。
+
+* 弱引用(WeakReference)
+
+程序中用来描述非必需对象，强度比软更弱些，被弱引用关联的对象只能生存到下一次垃圾收集发生之前。垃圾收集器工作时，无论内存是否足够，都会回收只被弱引用关联的对象。
+
+* 虚引用（PhantomReference)
+
+一个对象是否有虚引用的存在，完全不会对其生存时间构成影响，也无法通过虚引用来取得一个对象实例。为一个对象设置虚引用关联的唯一目的就是能在这个对象被收集器回收时收到一个系统通知。
+
+### 10，垃圾回收算法
+
+##### 10.1 标记-清除算法
+
+> 如名字所说：分为“标记”和“清除”两个阶段
+>
+> 首先：标记出所有需要回收的对象，在标记完成后统一回收所有被标记的对象。后续的收集算法都是基于这种思路的不足而对其改进而得到的。
+>
+> 不足：1，效率问题：标记和清除两个过程的效率都不高。2，空间问题：标记清除之后会产生大量不连续的内存碎片，空间碎片太多可能会导致以后程序运行需要分配较大对象时，无法找到足够的连续内存而不得不提前触发另一次辣鸡手机动作。
+
+##### 10.2 复制算法
+
+> 为了解决效率问题
+>
+> 它将内存大小划分为大小相等的两块，每次使用其中的一块。当这一块的内存用完了，就将还存活的对象复制到另外一块上面，然后再把已使用过的内存空间一次清理掉。
+>
+> 优点：内存分配时不用考虑内存碎片等复杂情况，只要移动堆顶指针，按顺序分配内存即可，实现简单，运行高效。
+>
+> 缺点：将内存缩小为了原来的一半，代价未免有点高。
+
+##### 10.3 标记-整理算法
+
+> 首先：标记出所有需要回收的对象，然后让所有存活的对象都向一端移动，然后清理掉端边界以外的内存。
+
+##### 10.4 分代收集算法
+
+> 当前商业虚拟机的垃圾收集都采用“分代收集”算法，这种算法并没有什么新的思想，只是根据对象存活周期的不同将内存划分为几块。一般是把**Java堆分为新生代和老年代**，就可以根据各个年代的特点采用最适合的收集算法。
+>
+> 新生代：每次垃圾收集时都发现有大批对象死去，只有少量存活，那就采用**复制算法**。只要付出少量存活对象的复制成本就可以完成收集。
+>
+> 老年代：因为对象的存活率高、没有额外空间对它进行分配担保，就必须使用**标记-清除**或者**标记-整理算法**来进行回收。
+
+### 11，GC收集器与优化
+
+> 回顾GC的历史，主要有四种GC收集器
+
+##### 11.1，Serial
+
+Serial收集器使用了标记-复制算法，但是GC进行时，程序会进入长时间的暂停，一般不太建议使用
+
+##### 11.2，Parallel
+
+Parallel收集器使用了标记-复制算法，称之为吞吐量优先的收集器，因为其最大的优势在于并行使用多线程去完成垃圾清理工作，这样可以充分利用多核的特性，大幅降低gc时间。例如消息队列，需要保证有效利用cpu，吞吐量达，且可以忍受一定的停顿时间可以使用这种方式。
+
+##### 11.3，CMS
+
+CMS收集器使用了标记-清除算法，重视服务器响应速度，希望停顿时间最短，可以选择。CMS在MinorGC收集时会暂停所有的应用线程，并以多线程的方式进行垃圾回收。
+
+##### 11.4，G1
+
+G1收集器使用标记-压缩清除算法，堆比较大时，减低full gc十分有必要，G1可以大大降低较大内存GC时产生的内存碎片。
